XSensor/XSNReader-20220817/XSNReader/XSNReader.h

enum EXSNPressureUnit
{
	eXSNPRESUNIT_MMHG = 0,	// millimeters of mercury
	eXSNPRESUNIT_INH2O,		// inches of water
	eXSNPRESUNIT_PSI,		// pounds/sq.inch
	eXSNPRESUNIT_KPA,		// kilopascals
	eXSNPRESUNIT_KGCM2,		// kgf/cm^2
	eXSNPRESUNIT_ATM,		// atmospheres
	eXSNPRESUNIT_NCM2,		// newtons/cm^2
	eXSNPRESUNIT_MBAR,		// millibars
	eXSNPRESUNIT_NM2,		// Newton/meter^2
	eXSNPRESUNIT_GCM2,		// grams/cm^2
	eXSNPRESUNIT_BAR,		// bar

	eXSNPRESUNIT_RAW = 255
};
// force/load units
enum EXSNForceUnit
{
	eXSNFORCEUNIT_UNKNOWN = 0,	//  raw pressure values?
	eXSNFORCEUNIT_NEWTONS = 1,	// newtons
	eXSNFORCEUNIT_KGF = 2,		// kilograms of force
	eXSNFORCEUNIT_LBF = 10,		// pound-force
};
enum EXSNReaderErrorCodes
{
	eXSN_ERRORCODE_OK,							// Function ran normally

	eXSN_ERRORCODE_LIBRARY_NOT_INITIALIZED,		// The DLL library has not been initialized

	eXSN_ERRORCODE_INVALID_XSN,					// LoadSession failed because the session is not a valid xsensor file
	eXSN_ERRORCODE_INVALID_VERSION,				// LoadSession failed because the session is a valid xsensor file, but the version is not supported.
	eXSN_ERRORCODE_UNSUPPORTED_SENSOR,			// The reader DLL does not support the sensor model found in the XSN.

	eXSN_ERRORCODE_NOSESSION,					// The operation failed because no session has been loaded.
	eXSN_ERRORCODE_EMPTYSESSION,				// The operation failed because there are no frames in this session

	eXSN_ERRORCODE_BADPARAMETER_OUTOFRANGE,		// a parameter is out of range
	eXSN_ERRORCODE_BADPARAMETER_NULL,			// null parameter - pass in a variable/buffers address

	eXSN_ERRORCODE_MEMORYALLOCATION_FAILED,		// the system seems to be running low on memory, or the DLL could not allocate some memory
};
// ===========================================================================
//	Configuration functions
// ===========================================================================

extern "C" XSNREADER_API EXSNReaderErrorCodes XSN_GetLastErrorCode();
// Returns true if the pad is a foot sensor.  bLeftSensor = false when its a right foot sensor.

extern "C" XSNREADER_API uint16_t XSN_Rows(uint8_t pad);
// Returns the number of rows associated with the pad index (0 based index)

extern "C" XSNREADER_API uint16_t XSN_Columns(uint8_t pad);
// Returns the number of columns associated with the pad index (0 based index)

extern "C" XSNREADER_API EXSNPressureUnit XSN_GetPressureUnits();
// Sets the pressure unit format of the pressure values

extern "C" XSNREADER_API EXSNForceUnit XSN_GetForceUnits();
extern "C" XSNREADER_API bool XSN_GetTimeStampUTCuS(uint16_t& nYear, uint16_t& nMonth, uint16_t& nDay, uint16_t& nHour, uint16_t& nMinute, uint16_t& nSecond, uint16_t& nMilliseconds, uint16_t& wMicrosecs);
// dataSize is the number of elements in the data[] array
// dataSize should be at least dataSize = XSN_Rows(pad) * XSN_Columns(pad). The function will fail if its not.

extern "C" XSNREADER_API bool XSN_GetPressureMapEx(uint8_t pad, float* pPressureMap, uint32_t& nMapElementCount);
// Similar to GetPressureMap, except that the caller must allocate the memory for a buffer and maintains ownership over the memory.
// pad is a 0 based index
// The caller is responsible for ensuring the pPressureMap buffer is large enough


// ===========================================================================
//	Pressure Map Statistics
// ===========================================================================

// These functions return the statistics for the current pressure map.
// If there is an error, -1.0f is returned for all stats functions. Call XSN_GetLastErrorCode() if that occurs.
// The pressure readings below the zero threshold are treated as zero.
// The zero threshold should be in the same units as XSN_GetPressureUnits().

extern "C" XSNREADER_API float XSN_GetStatAvgPressure(uint8_t pad, float nZeroThreshold);
// Return the average pressure of the pressure map. Zero pressure cells are not included in the statistic.

extern "C" XSNREADER_API float XSN_GetStatPeakPressure(uint8_t pad, float nZeroThreshold);
// Return the peak/maximum pressure on the pressure map.

extern "C" XSNREADER_API float XSN_GetStatMinPressure(uint8_t pad, float nZeroThreshold);
// Return the minimum pressure on the pressure map. Zero pressure cells are not included in the statistic.

extern "C" XSNREADER_API float XSN_GetStatContactAreaCM(uint8_t pad, float nZeroThreshold);
// Return the area (centimeters) of the pressure map with pressure at or above the zero threshold.
// Zero pressure cells are not included in the statistic.

extern "C" XSNREADER_API float XSN_GetStatEstimatedLoad(uint8_t pad, float nZeroThreshold);
// Return the estimated load (force) applied to the sensor.
// Zero pressure cells are not included in the statistic.
// Call XSN_GetForceUnits() to determine the units of the load statistic.


extern "C" XSNREADER_API bool XSN_GetCOP(uint8_t pad, float nZeroThreshold, float& column, float& row);