XSensor/ToS/XSNReader.py


# XSN_GetTimeStampUTCuS
# Retrieves the timestamp associated with the current frame - in UTC format
# bool XSN_GetTimeStampUTCuS(uint16_t& nYear, uint16_t& nMonth, uint16_t& nDay, uint16_t& nHour, uint16_t& nMinute, uint16_t& nSecond, uint16_t& nMilliseconds, uint16_t& wMicrosecs);
XSN_GetTimeStampUTCuS = libXSN.XSN_GetTimeStampUTCuS
XSN_GetTimeStampUTCuS.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p]
XSN_GetTimeStampUTCuS.restype = ctypes.c_ubyte

# ===========================================================================
#	Pressure Map Access
# ===========================================================================

# XSN_GetPressureMapEx
# Retrieves the pressure map. nMapElementCount is the number of element required for the pressure map.
# Set pPressureMap to None to just retrieve the nMapElementCount.
# nMapElementCount = XSN_Rows(pad) * XSN_Columns(pad);
# bool XSN_GetPressureMapEx(uint8_t pad, float* pPressureMap, uint32_t& nMapElementCount);
XSN_GetPressureMapEx = libXSN.XSN_GetPressureMapEx
XSN_GetPressureMapEx.argtypes = [ctypes.c_ubyte, ctypes.c_void_p, ctypes.c_void_p]
XSN_GetPressureMapEx.restype = ctypes.c_ubyte

# ===========================================================================
#	Pressure Map Statistics
# ===========================================================================

# These functions return the statistics for the current pressure map.
# If there is an error, -1.0f is returned for all stats functions. Call XSN_GetLastErrorCode() if that occurs.
# The pressure readings below the zero threshold are treated as zero.
# The zero threshold should be in the same units as XSN_GetPressureUnits().

# XSN_GetStatAvgPressure
# Return the average pressure of the pressure map. Zero pressure cells are not included in the statistic.
# float XSN_GetStatAvgPressure(uint8_t pad, float nZeroThreshold);
XSN_GetStatAvgPressure = libXSN.XSN_GetStatAvgPressure
XSN_GetStatAvgPressure.argtypes = [ctypes.c_ubyte, ctypes.c_float]
XSN_GetStatAvgPressure.restype = ctypes.c_float

# XSN_GetStatPeakPressure
# Return the peak/maximum pressure on the pressure map.
# float XSN_GetStatPeakPressure(uint8_t pad, float nZeroThreshold);
XSN_GetStatPeakPressure = libXSN.XSN_GetStatPeakPressure
XSN_GetStatPeakPressure.argtypes = [ctypes.c_ubyte, ctypes.c_float]
XSN_GetStatPeakPressure.restype = ctypes.c_float

# XSN_GetStatMinPressure
# Return the minimum pressure on the pressure map. Zero pressure cells are not included in the statistic.
# float XSN_GetStatMinPressure(uint8_t pad, float nZeroThreshold);
XSN_GetStatMinPressure = libXSN.XSN_GetStatMinPressure
XSN_GetStatMinPressure.argtypes = [ctypes.c_ubyte, ctypes.c_float]
XSN_GetStatMinPressure.restype = ctypes.c_float


# XSN_GetStatContactAreaCM
# Return the area (centimeters) of the pressure map with pressure at or above the zero threshold.
# Zero pressure cells are not included in the statistic.
# float XSN_GetStatContactAreaCM(uint8_t pad, float nZeroThreshold);
XSN_GetStatContactAreaCM = libXSN.XSN_GetStatContactAreaCM
XSN_GetStatContactAreaCM.argtypes = [ctypes.c_ubyte, ctypes.c_float]
XSN_GetStatContactAreaCM.restype = ctypes.c_float


# XSN_GetStatEstimatedLoad
# Return the estimated load (force) applied to the sensor.
# Zero pressure cells are not included in the statistic.
# Call XSN_GetForceUnits() to determine the units of the load statistic.
# float XSN_GetStatEstimatedLoad(uint8_t pad, float nZeroThreshold);
XSN_GetStatEstimatedLoad = libXSN.XSN_GetStatEstimatedLoad
XSN_GetStatEstimatedLoad.argtypes = [ctypes.c_ubyte, ctypes.c_float]
XSN_GetStatEstimatedLoad.restype = ctypes.c_float


# XSN_GetCOP
# Computes the center of pressure (COP) and returns its column and row coordinates.
# Returns negative coordinates if there is a problem. Call XSN_GetLastErrorCode() if that occurs.
# bool XSN_GetCOP(uint8_t pad, float nZeroThreshold, float& column, float& row);
XSN_GetCOP = libXSN.XSN_GetCOP
XSN_GetCOP.argtypes = [ctypes.c_ubyte, ctypes.c_float, ctypes.c_void_p, ctypes.c_void_p]
XSN_GetCOP.restype = ctypes.c_ubyte


# Computes the center of pressure (COP) and returns its column and row coordinates.
# Returns negative coordinates if there is a problem. Call XSN_GetLastErrorCode() if that occurs.
#
# The center of pressure calculation ignores pressure which is below the zero threshold.
# Row coordinates are from 1 to XSN_Rows()
# Column coordinates are from 1 to XSN_Columns()
#
# Whole numbers (no fractions) indicate the COP is over the center of the sensel.
#
# The fractional part of the coordinate indicates a normalized distance between
# the centers of two sensels.
#
# Example
# Suppose the function returns these values: column = 1.53f; row = 2.25f.
# This means the COP is 53% of the distance between the center of column 1 and
# the center of column 2. The COP is 25% of the distance between the center
# of row 2 and the center of row 3. (It is closer to row 2).

# ===========================================================================
# END OF FILE
# ===========================================================================
